components/microcks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microcks
  labels:
    platform.contract-first.io/secrets: enabled
