components/microcks/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: microcks
  namespace: microcks
  annotations:
    platform.contract-first.io/router-domain: example.invalid
spec:
  host: microcks.invalid
  to:
    kind: Service
    name: microcks
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
